--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="night">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>SupportMail | Modern Modmail + Reports</title>
+    <meta name="description" content="SupportMail is a modern Discord bot that features modmail and reports to step up your server's moderation game." />
+    <meta name="keywords" content="discord, bot, support, modmail, reports, moderation, supportmail" />
+    <meta name="author" content="SupportMail" />
+    <meta name="theme-color" content="#2d2d2d" />
+    <meta name="og:title" content="SupportMail | Modern Modmail + Reports" />
+    <meta name="og:description" content="SupportMail is a modern Discord bot that features modmail and reports to step up your server's moderation game." />
+    <meta name="og:image" content="%sveltekit.assets%/og-image.png" />
+    <meta name="og:url" content="https://supportmail.dev/" />
+    <meta name="og:site_name" content="SupportMail" />
+    <meta name="og:type" content="website" />
+    <meta name="og:locale" content="en_US" />
+    <meta name="og:locale:alternate" content="en_GB" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
+  <body>
+    <div style="display: contents;">%sveltekit.body%</div>
   </body>
 </html>
