feat: update project configuration and remove unused test file

--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
     <meta name="og:locale:alternate" content="en_GB" />
     %sveltekit.head%
   </head>
-  <body>
+  <body prerender>
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
