fix: update HTML document structure and improve Open Graph meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="%lang%" data-theme="night">
   <head>
     <meta charset="utf-8" />
@@ -12,16 +12,16 @@
     />
     <meta name="keywords" content="discord, bot, support, modmail, reports, moderation, supportmail" />
     <meta name="author" content="SupportMail" />
-    <meta name="theme-color" content="#2d2d2d" />
-    <meta name="og:image" content="%sveltekit.assets%/og-image.png" />
+    <meta name="theme-color" content="#0398fc" />
+    <meta name="og:image" content="%sveltekit.assets%/2to1_banner.png" />
+    <meta name="og:image:width" content="1200" />
+    <meta name="og:image:height" content="600" />
     <meta name="og:url" content="https://supportmail.dev/" />
     <meta name="og:site_name" content="SupportMail" />
     <meta name="og:type" content="website" />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:locale:alternate" content="en_GB" />
     %sveltekit.head%
   </head>
-  <body>
+  <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
