fix: update logo paths and enhance meta tags for social sharing

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="%lang%" data-theme="night">
   <head>
     <meta charset="utf-8" />
@@ -13,12 +13,12 @@
     <meta name="keywords" content="discord, bot, support, modmail, reports, moderation, supportmail" />
     <meta name="author" content="SupportMail" />
     <meta name="theme-color" content="#0398fc" />
-    <meta name="og:image" content="%sveltekit.assets%/2to1_banner.png" />
-    <meta name="og:image:width" content="1200" />
-    <meta name="og:image:height" content="600" />
+    <meta name="og:image" content="%sveltekit.assets%/assets/logo.png" />
     <meta name="og:url" content="https://supportmail.dev/" />
     <meta name="og:site_name" content="SupportMail" />
     <meta name="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="%sveltekit.assets%/assets/logo.png" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
