--- a/src/app.html
+++ b/src/app.html
@@ -19,6 +19,7 @@
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="%sveltekit.assets%/assets/logo.png" />
+    <meta name="apple-touch-icon" content="%sveltekit.assets%/favicon.png" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
