feat: bump version to 1.2.2 and update favicon URLs to use absolute paths

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="%lang%" data-theme="night">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" href="https://supportmail.dev/favicon.png" />
+    <meta name="apple-touch-icon" content="https://supportmail.dev/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,13 +14,12 @@
     <meta name="keywords" content="discord, bot, support, modmail, reports, moderation, supportmail" />
     <meta name="author" content="SupportMail" />
     <meta name="theme-color" content="#0398fc" />
-    <meta name="og:image" content="%sveltekit.assets%/assets/logo.png" />
+    <meta name="og:image" content="https://supportmail.dev//assets/logo.png" />
     <meta name="og:url" content="https://supportmail.dev/" />
     <meta name="og:site_name" content="SupportMail" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="%sveltekit.assets%/assets/logo.png" />
-    <meta name="apple-touch-icon" content="%sveltekit.assets%/favicon.png" />
+    <meta name="twitter:image" content="https://supportmail.dev/assets/logo.png" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
