--- a/src/app.html
+++ b/src/app.html
@@ -14,12 +14,12 @@
     <meta name="keywords" content="discord, bot, support, modmail, reports, moderation, supportmail" />
     <meta name="author" content="SupportMail" />
     <meta name="theme-color" content="#0398fc" />
-    <meta name="og:image" content="https://supportmail.dev//assets/logo.png" />
+    <meta name="og:image" content="https://supportmail.dev/assets/logo.png" />
     <meta name="og:url" content="https://supportmail.dev/" />
+    <meta property="twitter:url" content="https://supportmail.dev/" />
+    <meta property="twitter:domain" content="supportmail.dev" />
     <meta name="og:site_name" content="SupportMail" />
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="https://supportmail.dev/assets/logo.png" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
