feat: add shortcut icon link to the head section of app.html

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://supportmail.dev/favicon.png" />
+    <link rel="shortcut icon" href="https://supportmail.dev/favicon.png" />
     <meta name="apple-touch-icon" content="https://supportmail.dev/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
