feat: enhance invite handling and UI components
- Updated app.d.ts to include APIInvite and APIInviteGuild types for better invite management.
- Changed favicon links in app.html from PNG to ICO format for improved compatibility.
- Modified formatNumber function in index.ts to accept an optional parameter for displaying the plus sign.
- Adjusted error.svelte to change max-width for better responsiveness.
- Refactored layout.svelte to use 'grow' class for better layout management.
- Enhanced page.server.ts to fetch guild invites and include them in the load function.
- Updated page.svelte to integrate ServerCarousel component for displaying guild invites.
- Created ServerCarousel.svelte to implement an infinite scroll carousel for guild invites.
- Added get-guilds/+server.ts to fetch featured Discord invites using the Discord API.
- Updated worker-configuration.d.ts to include BOT_TOKEN for environment configuration.

--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,9 @@
 <html lang="%lang%" data-theme="night">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://supportmail.dev/favicon.png" />
-    <link rel="shortcut icon" href="https://supportmail.dev/favicon.png" />
-    <meta name="apple-touch-icon" content="https://supportmail.dev/favicon.png" />
+    <link rel="icon" href="https://supportmail.dev/favicon.ico" />
+    <link rel="shortcut icon" href="https://supportmail.dev/favicon.ico" />
+    <meta name="apple-touch-icon" content="https://supportmail.dev/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
